--- a/src/css/2-snackbar.css
+++ b/src/css/2-snackbar.css
@@ -1,70 +1,102 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 30px; /* Space between elements */
-  max-width: 360px;
-  height: 100%;
+  width: 360px;
 }
 
 label {
   display: flex;
   flex-direction: column;
-  color: #2e2f42;
+  gap: 8px;
+}
 
-  font-family: Montserrat;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.64px;
+input[type='number'],
+fieldset,
+button {
+  width: 100%;
+  box-sizing: border-box;
+  outline: none;
+  transition: color, background-color 0.3s, color 0.3s;
+}
+
+input[type='number'],
+fieldset {
+  border-radius: 4px;
+  border: 1px solid #808080;
 }
 
 input[type='number'] {
-  width: 360px; /* Limits width for better UI */
-  padding: 8px 12px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  outline: none;
-  transition: border-color 0.3s ease;
+  height: 40px;
+}
+
+input[type='number']:hover,
+fieldset:hover {
+  border: 1px solid #000;
+}
+
+input[type='number']:focus {
+  border: 1px solid #4e75ff;
 }
 
 fieldset {
   display: flex;
-  flex-direction: row;
-  max-width: 360px;
   height: 64px;
+  justify-content: center;
   gap: 48px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  padding: 24px 48px 8px;
+  width: 100%;
+  margin-top: 30px;
+  padding: 12px;
+}
+
+input[name='state'] {
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #6c757d;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+}
+
+input[name='state']:checked {
+  border-color: #4e75ff;
+}
+
+input[name='state']:checked::before {
+  content: '';
+  width: 10px;
+  height: 10px;
+  background-color: #4e75ff;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 fieldset label {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-}
-
-input[type='radio'] {
-  width: 32px;
-  height: 32px;
-  cursor: pointer;
+  gap: 8px;
 }
 
 button {
   display: flex;
-  width: 360px;
   height: 40px;
   padding: 8px 16px;
+  margin-top: 24px;
   justify-content: center;
   align-items: center;
   background-color: #4e75ff;
   border: none;
   border-radius: 8px;
   color: #fff;
-
   font-family: inherit;
   font-size: inherit;
+}
+
+button:hover {
+  background-color: #6c8cff;
 }
